--- a/Research.html
+++ b/Research.html
@@ -48,11 +48,11 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h2>Interpretative Neural </h2>
-									<p>Key Words: </p>
-									<p>Motivation: </p>
-									<p>Task: </p>
-									<p>Method: </p>
+									<h2>Interpretative Neural Feature Primitives for Image Classification</h2>
+									<p>Key Words: Key Words: Explanability of Neural Networks, Abductive Reasoning, Visual Association.</p>
+									<p>Motivation: Human can recognize instances by executing association between different visual concepts using simple features such as shape, texture, color or symbol. I call these simple explanable features primitives. Can we train a neural network that detects such feature primmitives, and has compositional generalization ability over feature primitives?</p>
+									<p>Toy Data: We construct a toy image dataset with objects in diverse shapes, textures, colors, and with different symbols on them, using C4D.</p>
+									<p>Method: We train 4 CNN classifiers, one in each simple feature family. For a particular sample, we order the other samples by calculating their similarities to it. Experiments show that our method extremely reduces the open-world risk for novel instances and we can link them with known classes by applying association over some features. We couldn't go further due to the lack of computing resource.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/YuzheSHI/ABL-Feature" class="button scrolly">Project</a></li>
 									</ul>
