--- a/index.html
+++ b/index.html
@@ -40,9 +40,9 @@
 							<p>I am pursuing for Bachelor degree of computer science at Huazhong University of Science and Techenology, graduating due June 2022</a>.</p>
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn More</a></li>
-								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
+								<li><a href="research.pdf" class="button scrolly">Research</a></li>
 								<li><a href="yzs_cv.pdf" class="button scrolly">CV</a></li>
-								<!--<li><a href="CV/YuzheShi_CV_Chinese.pdf" class="button scrolly">简历</a></li>-->
+								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
 							</ul>
 				<p>Currently I'm insterested in the reciprocative research of Machine Learning and Cognitive Science, where the former is promoted by the latter, to find a way towards Artificial General Intelligence that solves high-level tasks with human-level intelligence. Though enjoying a boost from early 2010s with the rapid progress of computing power, deep-learning based industrial applications of artificial intelligence suffers from the uncomprehensibility of the model, thus arises unreliability. Also, the black-box method is also limited by its data-hungry nature and the capacity to handle high-level cognitive learning tasks. Hence, deep-learning is obviously not the response to the call for general intelligence. As individuals with high-level intelligence, human intelligence provides a infinite source of templates for machine intelligence. Understanding the mental process of human abstraction, planning, decision and inventing new concepts absolutely shed light on machine learning research.</p>
 								
