--- a/Notes.html
+++ b/Notes.html
@@ -36,6 +36,14 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>A Paper Reading List for Artificial General Intelligence</h2>
+									<p>Composed by BIGAI Rearch & Center for VCLA, originally for the students at AGI Honored Class, THU & PKU.</p>
+									<ul class="actions">
+										<li><a href="/Notes/PaperReadingList_BIGAI.pdf" class="button scrolly">Project</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>Awesome Cognitive Machine Learning</h2>
 									<p>An awesome & curated list for cognitive machine learning, an emerging inter-discipline field that combines machine learning and cognitive science.</p>
 									<ul class="actions">
