--- a/Notes.html
+++ b/Notes.html
@@ -37,7 +37,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h2>A Introductory Reading List for Artificial General Intelligence</h2>
-									<p>Composed by BIGAI Rearch & Center for VCLA, originally for the students at AGI Honored Class, THU & PKU. This reading list is appropriate for those who want to know about the foundations of AGI.</p>
+									<p>Composed by BIGAI Rearch & Center for VCLA, originally for the students at AGI Honored Class, THU & PKU. This reading list is appropriate for those who want to learn about the foundations of AGI.</p>
 									<ul class="actions">
 										<li><a href="/Notes/AGI_Readings_Intro.pdf" class="button scrolly">Project</a></li>
 									</ul>
