--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<li><a href="research.pdf" class="button scrolly">Research</a></li>
 								<li><a href="yzs_cv.pdf" class="button scrolly">CV</a></li>
 								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
-								<li><a href="https://github.com/YuzheSHI/Awesome-AGI-CoCoSci" class="button scrolly">AGI & CoCoSci</a></li>
+								<li><a href="https://github.com/YuzheSHI/Awesome-AGI-CoCoSci/blob/master/README.md" class="button scrolly">AGI & CoCoSci</a></li>
 							</ul>
 				<p>Currently I'm interested in Artificial General Intelligence, an emerging inter-discipline field that combines artificial intelligence and computational cognitive sciences as majority, alone with probability and mathematical statistics, formal logic, cognitive and developmental psychology, computational philosophy, cognitive neuroscience, and computational sociology. We are promoting high-level machine intelligence by getting inspirations from the way that human learns and thinks, while obtaining a deeper understanding of human cognition simultaneously. We believe that this kind of reciprocative research is a potential way towards our big picture: building intelligent agents with the capacity to handle human-level tasks such as abstracting, explaining, learning, planning, and making decisions.</p>
 								
