--- a/index.html
+++ b/index.html
@@ -39,12 +39,12 @@
 							<h1><img src ="images/Avatar_L.JPG" width = "90" />  Yu-Zhe Shi 师宇哲 </h1> 
 							<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn More</a></li>
-								<li><a href="research.pdf" class="button scrolly">Research Statement</a></li>
-								<li><a href="yzs_cv.pdf" class="button scrolly">CV</a></li>
+								<li><a href="YZShi_Research_Statement.pdf" class="button scrolly">Research Statement</a></li>
+								<li><a href="YZShi_CV.pdf" class="button scrolly">CV</a></li>
 								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
 								<li><a href="https://github.com/YuzheSHI/Awesome-AGI-CoCoSci/blob/master/README.md" class="button scrolly">AGI & CoCoSci</a></li>
 							</ul>
-							<p>Currently I'm interested in Artificial General Intelligence, an emerging inter-discipline field that combines artificial intelligence and computational cognitive sciences as majority, alone with probability and mathematical statistics, formal logic, cognitive and developmental psychology, computational philosophy, cognitive neuroscience, and computational sociology. We are promoting high-level machine intelligence by getting inspirations from the way that human learns and thinks, while obtaining a deeper understanding of human cognition simultaneously. We believe that this kind of reciprocative research is a potential way towards our big picture: building intelligent agents with the capacity to handle human-level tasks such as abstracting, explaining, learning, planning, and making decisions.</p>
+							<p>I study how humans come up with new ideas when dealing with the complex world, i.e., abduction. In my hypothesis, inner preference, knowledge representation, and external information are three entries to explain the diversity, efficiency, and convergence of human minds. To verify these assumptions, I reverse engineer the development and the limitations of human abduction. My long-term goal is to develop computational frameworks to understand abduction, thus shedding light on both behavioral studies and artificial intelligence..</p>
 							<img src = "images/abd_map.png" width = "900"/>	
 							</ul>
 						</div>
