--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
 							<h1><img src ="images/Avatar_L.JPG" width = "90" />  Yu-Zhe Shi 师宇哲 </h1> 
 							<ul class="actions">
 								<li><a href="YZShi_Research_Statement.pdf" class="button scrolly">Research Statement</a></li>
-								<li><a href="YZShi_CV.pdf" class="button scrolly">CV</a></li>
+								<li><a href="YZShi_CV.pdf" class="button scrolly">Curriculum Vitae</a></li>
 								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
 								<li><a href="https://github.com/YuzheSHI/Awesome-AGI-CoCoSci/blob/master/README.md" class="button scrolly">AGI & CoCoSci</a></li>
 							</ul>
