--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
 						<div class="inner">
 							<h1><img src ="images/Avatar_L.JPG" width = "90" />  Yu-Zhe Shi 师宇哲 </h1> 
 							<ul class="actions">
-								<li><a href="YZShi_Research_Statement.pdf" class="button scrolly">Research Statement</a></li>
-								<li><a href="YZShi_CV.pdf" class="button scrolly">Curriculum Vitae</a></li>
+								<li><a href="site/YZShi_Research_Statement.pdf" class="button scrolly">Research Statement</a></li>
+								<li><a href="site/YZShi_CV.pdf" class="button scrolly">Curriculum Vitae</a></li>
 								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
 								<li><a href="https://github.com/YuzheSHI/Awesome-AGI-CoCoSci/blob/master/README.md" class="button scrolly">AGI & CoCoSci</a></li>
 							</ul>
