add inclusion & diversity

--- a/index.html
+++ b/index.html
@@ -39,9 +39,10 @@
 							<h1><img src ="images/Avatar_L.JPG" width = "90" />  Yu-Zhe Shi 师宇哲 </h1> 
 							<ul class="actions">
 								<li><a href="site/YZShi_Research_Statement.pdf" class="button scrolly">Research Statement</a></li>
+								<li><a href="site/YZShi_Diversity_and_Inclusion_Statement.pdf" class="button scrolly">Diversity & Inclusion Statement</a></li>
 								<li><a href="site/YZShi_CV.pdf" class="button scrolly">Curriculum Vitae</a></li>
 								<li><a href="https://github.com/YuzheSHI" class="button scrolly">GitHub</a></li>
-								<li><a href="https://github.com/YuzheSHI/Awesome-AGI-CoCoSci/blob/master/README.md" class="button scrolly">AGI & CoCoSci</a></li>
+								<!-- <li><a href="https://github.com/YuzheSHI/Awesome-AGI-CoCoSci/blob/master/README.md" class="button scrolly">Reading List</a></li> -->
 							</ul>
 							<p>I study how humans come up with new ideas when dealing with the complex world, i.e., abduction. In my hypothesis, inner preference, knowledge representation, and external information are three entries to explain the diversity, efficiency, and convergence of human minds. To verify these assumptions, I reverse engineer the development and the limitations of human abduction. My long-term goal is to develop computational frameworks to understand abduction, thus shedding light on both behavioral studies and artificial intelligence.</p>
 							<img src = "images/abd_map.png" width = "900"/>	
