add generative modeling tutorial

--- a/Notes.html
+++ b/Notes.html
@@ -36,6 +36,14 @@
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
+									<h2>Tutorial: Generative Modeling Explained</h2>
+									<p>This tutorial on generative modeling is in part of Statistical Machine Learning Tutorial by Ying Nian Wu at UCLA Statistics. The tutorial goes over the key equations and algorithms for learning recent generative models, including energy-based models, diffusion/score-based models, autoregressive/flow-based models, VAEs, and GANs, and explains the connections between these models.</p>
+									<ul class="actions">
+										<li><a href="https://github.com/YuzheSHI/generative-modeling-explained" class="button scrolly">Tutorial</a></li>
+									</ul>
+								</section>
+								<section>
+									<span class="icon solid major fa-code"></span>
 									<h2>A Introductory Reading List for Artificial General Intelligence</h2>
 									<p>Composed by BIGAI Rearch & Center for VCLA, originally for the students at AGI Honored Class, THU & PKU. This reading list is appropriate for those who want to learn about the foundations of AGI.</p>
 									<ul class="actions">
