add new contents

--- a/Notes.html
+++ b/Notes.html
@@ -45,17 +45,17 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h2>A Introductory Reading List for Artificial General Intelligence</h2>
-									<p>Composed by BIGAI Rearch & Center for VCLA, originally for the students at AGI Honored Class, THU & PKU. This reading list is appropriate for those who want to learn about the foundations of AGI.</p>
+									<p>Composed by BIGAI Rearch & Center for VCLA, originally for the students at the Elite Program of General AI (Tong Class), THU & PKU. This reading list is appropriate for those who want to learn about the foundations of AGI.</p>
 									<ul class="actions">
-										<li><a href="/Notes/AGI_Readings_Intro.pdf" class="button scrolly">Project</a></li>
+										<li><a href="/Notes/AGI_Readings_Intro.pdf" class="button scrolly">Reading List</a></li>
 									</ul>
 								</section>
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h2>Awesome Cognitive Machine Learning</h2>
-									<p>An awesome & curated list for cognitive machine learning, an emerging inter-discipline field that combines machine learning and cognitive science.</p>
+									<h2>Awesome AGI & CoCoSci</h2>
+									<p>An awesome & curated list for Artificial General Intelligence, an emerging inter-discipline field that combines artificial intelligence and computational cognitive sciences as majority, alone with probability and statistics, formal logic, cognitive and developmental psychology, computational philosophy, cognitive neuroscience, and computational sociology. Awesome AGI & CoCoSci is an all-in-one collection, consisting of recources from basic courses and tutorials, to papers and books around multiple topics. Both junior and senior researchers, whether learning, working on, or working around AGI, meet their interest here.</p>
 									<ul class="actions">
-										<li><a href="https://github.com/YuzheSHI/awesome-cognitive-machine-learning" class="button scrolly">Project</a></li>
+										<li><a href="https://github.com/YuzheSHI/awesome-agi-cocosci" class="button scrolly">Reading List</a></li>
 									</ul>
 								</section>
 								<section>
@@ -63,7 +63,7 @@
 									<h2>Beethoven 250th</h2>
 									<p> An article on the music of Beethoven for his 250th birthday. 世事无常，音乐永恒——贝多芬诞辰250周年纪念日（简体中文撰写）。</p>
 									<ul class="actions">
-										<li><a href="/Notes/Beethoven250th.pdf" class="button scrolly">Project</a></li>
+										<li><a href="/Notes/Beethoven250th.pdf" class="button scrolly">Article</a></li>
 									</ul>
 								</section>
 								<section>
@@ -71,7 +71,7 @@
 									<h2>Program Synthesis Tutorial</h2>
 									<p> My slides for presentation at LAMDA Group, giving a coarse introduction to Program Synthesis, a sub-field of AI.</p>
 									<ul class="actions">
-										<li><a href="Notes/Program_Synthesis_Tutorial.pdf" class="button scrolly">Project</a></li>
+										<li><a href="Notes/Program_Synthesis_Tutorial.pdf" class="button scrolly">Slides</a></li>
 									</ul>
 								</section>
 								<section>
@@ -79,7 +79,7 @@
 									<h2>Machine Learning Note</h2>
 									<p> Refined notes for Machine Learning, form both the probabilistic perspective and the logical perspective.</p>
 									<ul class="actions">
-										<li><a href="Notes/ML-Notes.pdf" class="button scrolly">Project</a></li>
+										<li><a href="Notes/ML-Notes.pdf" class="button scrolly">Notes</a></li>
 									</ul>
 								</section>
 								<section>
@@ -87,7 +87,7 @@
 									<h2>Linear Classifiers</h2>
 									<p> Commons and distinctions between linear classifiers.本文比较了几种线性分类器的异同（中文撰写）。</p>
 									<ul class="actions">
-										<li><a href="Notes/LinearClassifier_Note.pdf" class="button scrolly">Project</a></li>
+										<li><a href="Notes/LinearClassifier_Note.pdf" class="button scrolly">Notes</a></li>
 									</ul>
 								</section>
 								<section>
