--- a/Notes.html
+++ b/Notes.html
@@ -95,7 +95,8 @@
 									<h2>Seminar: Few-Shot Bayesian Imitation Learning with Logical Program Policies</h2>
 									<p>My slides for presentation at LAMDA Group, introducing Few-Shot Bayesian Imitation Learning with Logical Program Policies (AAAI'20)</p>
 									<ul class="actions">
-										<li><a href="Notes/Seminar_Logical Program Policies.pdf" class="button scrolly">Slides</a></li><li><a href="https://arxiv.org/abs/1904.06317" class="button scrolly">Reference</a></li>
+										<li><a href="Notes/Seminar_Logical Program Policies.pdf" class="button scrolly">Slides</a></li>
+										<li><a href="https://arxiv.org/abs/1904.06317" class="button scrolly">Reference</a></li>
 									</ul>
 								</section>
 								<section>
@@ -103,7 +104,8 @@
 									<h2>Seminar: A Probabilistic Programming Language for Scene Perception</h2>
 									<p>My slides for presentation at LAMDA Group, introducing Picture: A Probabilistic Programming Language for Scene Perception (CVPR'15)</p>
 									<ul class="actions">
-										<li><a href="Notes/Seminar_Picture.pdf" class="button scrolly">Slides</a></li><li><a href="https://dspace.mit.edu/handle/1721.1/96620" class="button scrolly">Reference</a></li>
+										<li><a href="Notes/Seminar_Picture.pdf" class="button scrolly">Slides</a></li>
+										<li><a href="https://dspace.mit.edu/handle/1721.1/96620" class="button scrolly">Reference</a></li>
 									</ul>
 								</section>
 								<section>
@@ -119,7 +121,8 @@
 									<h2>Seminar: G2SAT</h2>
 									<p>My notes and slides for presentation at LAMDA Group, introducing G2SAT (NIPS'19)</p>
 									<ul class="actions">
-										<li><a href="Notes/Note-G2SAT.pdf" class="button scrolly">Notes</a></li><li><a href="Notes/Presentation-G2SAT.pdf" class="button scrolly">Slides</a></li><li><a href="https://arxiv.org/abs/1910.13445" class="button scrolly">Reference</a></li>
+										<li><a href="Notes/Note-G2SAT.pdf" class="button scrolly">Notes</a></li><li><a href="Notes/Presentation-G2SAT.pdf" class="button scrolly">Slides</a></li>
+										<li><a href="https://arxiv.org/abs/1910.13445" class="button scrolly">Reference</a></li>
 									</ul>
 								</section>
 								<section>
