--- a/Projects.html
+++ b/Projects.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Yuzhe Shi</a>
+				<a href="index.html" class="title">Yu-Zhe Shi</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -53,7 +53,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Yuzhe Shi. All rights reserved.</li>
+						<li>&copy; Yu-Zhe Shi. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
