--- a/Notes.html
+++ b/Notes.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Notes & Tutorials</h1>
-							<div class="features">
+							<div class="content">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h2>Tutorial: Generative Modeling Explained</h2>
