--- a/Research.html
+++ b/Research.html
@@ -34,8 +34,7 @@
 						<div class="inner">
 							<h1 class="major">Research</h1>
 							<!--<span class="image fit"><img src="images/pic04.jpg" alt="" /></span>-->
-							
-							<div class="features">
+							<div class="content">
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h2>To think inside the box, or to think out of the box? Scientific discovery via the reciprocation of insights and concepts</h2>
