--- a/Resources.html
+++ b/Resources.html
@@ -33,7 +33,7 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Resources</h1>
-							<div class="features">
+							<div class="content">
 
 								<section>
 									<span class="icon solid major fa-code"></span>
