--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 -->
 <html>
 	<head>
-		<title>Welcome to Yu-Zhe Shi's Homepage!</title>
+		<title>Welcome to SHI Yu-Zhe's Homepage!</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
@@ -36,7 +36,7 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style2-black fullscreen fade-up">
 						<div class="inner">
-							<h1><img src ="images/Avatar_L.JPG" width = "90" />  Yu-Zhe Shi 师宇哲 </h1> 
+							<h1><img src ="images/Avatar_L.JPG" width = "90" />  SHI Yu-Zhe 师宇哲 </h1> 
 							<!-- <ul class="actions">
 								<li><a href="site/YZShi_CV.pdf" class="button scrolly">Curriculum Vitae</a></li>
 								<li><a href="site/YZShi_Research_Statement.pdf" class="button scrolly">Research Statement</a></li>
@@ -186,7 +186,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Yu-Zhe Shi. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; SHI Yu-Zhe. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
