--- a/index.html
+++ b/index.html
@@ -161,8 +161,7 @@
 										</li>
 										<li>
 											<h3>Email</h3>
-											<span><a href="#">yuzhe_shi@outlook.com</a><br />
-												<a href="#">shiyuzhe@hust.edu.cn</a></span>
+											<span><a href="#">yu.zhe.s.shi@gmail.com</a></span>
 										</li>
 										<li>
 											<h3>Phone</h3>
