--- a/Resources.html
+++ b/Resources.html
@@ -35,14 +35,14 @@
 							<h1 class="major">Resources</h1>
 							<div class="content">
 
-								<section>
+								<!-- <section>
 									<span class="icon solid major fa-code"></span>
 									<h2>LaTex Templates for HUST</h2>
 									<p>LaTex Templates for Computer Science Lab Reports and assignments. Supporting Simplified Chinese.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/YuzheSHI/HUST-Lab_Reports-and-Assignments-LaTex-Templates" class="button scrolly">Project</a></li>
 									</ul>
-								</section>
+								</section> -->
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h2>Useful Templates for Plot</h2>
