--- a/Resources.html
+++ b/Resources.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Yu-Zhe Shi</a>
+				<a href="index.html" class="title">SHI Yu-Zhe</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -71,7 +71,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Yu-Zhe Shi. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; SHI Yu-Zhe. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
