--- a/Members.html
+++ b/Members.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Yu-Zhe Shi</a>
+				<a href="index.html" class="title">SHI Yu-Zhe</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
@@ -37,7 +37,7 @@
 							<div class="features">
 								<section>
 									
-									<h2>Yu-Zhe Shi</h2>
+									<h2>SHI Yu-Zhe</h2>
 									<p>Online Learning, Computer Vision-Visual Object Tracking.</p>
 									<ul class="actions">
 										<li><a href="https://yuzheshi.github.io/" class="button scrolly">Homepage</a></li>
@@ -95,7 +95,7 @@
 			<footer id="footer" class="wrapper alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Yu-Zhe Shi. All rights reserved.</li>
+						<li>&copy; SHI Yu-Zhe. All rights reserved.</li>
 					</ul>
 				</div>
 			</footer>
