--- a/Notes.html
+++ b/Notes.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Yu-Zhe Shi</a>
+				<a href="index.html" class="title">SHI Yu-Zhe</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
