--- a/Research.html
+++ b/Research.html
@@ -41,7 +41,7 @@
 									<p>Key Words: Scientific Discovery, Insight Problem Solving, Semantics Landscape.</p>
 									<p>If scientific discovery is one of the main driving forces of human progress, insight is the fuel for the engine, which has long attracted behavior-level research to understand and model its underlying cognitive process. However, current tasks that abstract scientific discovery mostly focus on the emergence of insight, ignoring the special role played by domain knowledge. In this concept paper, we view scientific discovery as an interplay between thinking out of the box that actively seeks insightful solutions and thinking inside the box that generalizes on conceptual domain knowledge to keep correct. Accordingly, we propose Mindle, a semantic searching game that triggers scientific-discovery-like thinking spontaneously, as infrastructure for exploring scientific discovery on a large scale. On this basis, the meta-strategies for insights and the usage of concepts can be investigated reciprocally. In the pilot studies, several interesting observations inspire elaborated hypotheses on meta-strategies, context, and individual diversity for further investigations.</p>
 									<ul class="actions">
-										<li><a href="https://arxiv.org/abs/2212.00258" class="button scrolly">Concept Paper</a></li>
+										<li><a href="https://arxiv.org/abs/2212.00258" class="button scrolly">Paper</a></li>
 										<li><a href="http://mindle.cn/" class="button scrolly">Mindle (Web)</a></li>
 										<li><a href="https://github.com/YuzheSHI/Mindle" class="button scrolly">Code</a></li>
 									</ul>
@@ -111,7 +111,7 @@
 										<li><a href="https://github.com/YuzheSHI/ABL-Feature" class="button scrolly">Project</a></li>
 									</ul>
 								</section>
-								<section>
+								<!-- <section>
 									<span class="icon solid major fa-code"></span>
 									<h2>Waiting for the Bus: A Human-Centered Computing Perspective</h2>
 									<p>Key Words: Subjective Probability, Inverse Planning.</p>
@@ -121,7 +121,7 @@
 									<ul class="actions">
 										<li><a href="https://github.com/YuzheSHI/Waiting-Interaction-Experiment" class="button scrolly">Project</a></li>
 									</ul>
-								</section>
+								</section> -->
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h2>Abductive Novel Object Invention for Incremental Learning</h2>
@@ -133,14 +133,14 @@
 										<li><a href="https://github.com/YuzheSHI/ABL-AOI" class="button scrolly">Project</a></li>
 									</ul>
 								</section>
-								<section>
+								<!-- <section>
 									<span class="icon solid major fa-code"></span>
 									<h2>Experimental Study on Visual Object Tracking</h2>
 									<p>We study the merits of diverse visual tracking paradigms by comparative experiments. Having learned the limitations of deep learning, I decided to pursuit for intelligence which is more general, reliable and comprehensible.</p>
 									<ul class="actions">
 										<li><a href="https://github.com/YuzheSHI/CSUR-paper-workspace" class="button scrolly">Project</a></li>
 									</ul>
-								</section>
+								</section> -->
 							</div>
 						</div>
 					</section>
